Fixes #21416: dashboards widget are not correctly aligned

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-dashboard.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-dashboard.css
@@ -150,6 +150,9 @@ ul.graph-legend{
   max-width: 100%;
   margin: 15px auto 0px auto;
 }
+#nodeOverview {
+  height: 382px;
+}
 #nodeOverview ul.graph-legend{
   width: 290px;
 }
